kubernetes/storage/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: minio
          image: cgr.dev/chainguard/minio:latest
          args: ["server", "/data", "--address", ":9000"]
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: api
              containerPort: 9000
              protocol: TCP
            - name: console
              containerPort: 9001
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: api
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: api
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /minio/health/live
              port: api
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - name: minio-storage
              mountPath: "/data"
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
