kubernetes/storage/minio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-http-route
  namespace: minio
  labels:
    app: minio
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "s3.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: minio-service
          port: 9000
    - matches:
        - path:
            type: PathPrefix
            value: /minio
      backendRefs:
        - name: minio-service
          port: 9001
